--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
-    "normalize-scss": "^6.0.0",
+    "flexboxgrid": "^6.3.1",
+    "reset-css": "^2.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
