--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "flexboxgrid": "^6.3.1",
+    "include-media": "^1.4.9",
     "reset-css": "^2.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
